Fixed editor bottom scrollbar not showing

--- a/src/style/editor.scss
+++ b/src/style/editor.scss
@@ -1,4 +1,6 @@
 #monaco-editor-container {
-    width: 100%;
-    height: 100%;
-  }
+  width: 100%;
+  height: calc(100% - var(--tab-bar-height));
+  margin-top: var(--tab-bar-height);
+  overflow: hidden;
+}
