--- a/src/style/tabs.scss
+++ b/src/style/tabs.scss
@@ -1,5 +1,6 @@
 .tabs {
   width: 100%;
+  overflow: hidden;
 
   .tab-list {
     display: flex;
@@ -8,6 +9,13 @@
     margin: 0;
     overflow-x: auto;
     border-bottom: 1px solid var(--color-panel-border);
+    position: absolute;
+    height: var(--tab-bar-height);
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: white;
+    z-index: 1;
   }
 
   .tab {
